# emdb_lib

./: 108-Principles-Emma-Dearborn.md  Cargo.toml  README.md  prefixes.txt  suffixes.txt  suffixes_labels.txt
benches/: emdb_benchmark.rs
src/: .gitignore  lib.rs  phoneme_clusters.rs  phonetics.rs  phrasing.rs  prefixes.rs  punctuation.rs  suffixes.rs  types.rs  word_beginnings.rs  word_building.rs  word_endings_additional.rs
src/morphemes/: mod.rs  prefixes.rs  suffixes.rs
src/words/: beginnings.rs  building.rs  endings_additional.rs  endings_freq.rs  mod.rs
