[package]
name = "emdb_lib"
license = "MIT"
description = "Orthographic token compression"
homepage = "https://dearborn.cc"
repository = "https://github.com/gsspdev/emdb_lib"
readme = "README.md"
version = "0.1.2"
edition = "2021"
exclude = [
    ".idea/*",
    "input.txt",
    "output.txt",
    "108-Principles-Emma-Dearborn.md",
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.toml.orig"
]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
unicode-segmentation = "1.12.0"
