[package]
name = "emdb_lib"
license = "MIT"
description = "Orthographic token compression"
homepage = "https://dearborn.cc"
repository = "https://github.com/gsspdev/emdb_lib"
readme = "README.md"
version = "0.1.3"
edition = "2021"
exclude = [
    ".idea/*",
    "input.txt",
    "output.txt",
    "108-Principles-Emma-Dearborn.md",
    ".cargo_vcs_info.json",
    ".gitignore",
    "Cargo.toml.orig",
    "benches/emdb_benchmark.rs"
]

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["alloc", "derive", "rc", "serde_derive", "unstable"] }
str-utils = "0.1.7"
unicode-segmentation = "1.12.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "emdb_benchmark"
harness = false
